--- a/CMIM/CMIM/appsettings.json
+++ b/CMIM/CMIM/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnect": "Data Source=.\\SQLEXPRESS;Initial Catalog=CMIM;Integrated Security=True"
+    "DBConnect": "Data Source=.\\SQLEXPRESS;Initial Catalog=CMIM;Integrated Security=False;User Id=sa;password=ShanayaBassor2912"
   },
   "AppSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
